k8s/apps/lathibandolaise/deployment-test.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lathibandolaise-test
  namespace: lathibandolaise
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: lathibandolaise-test
  template:
    metadata:
      labels:
        app: lathibandolaise-test
    spec:
      containers:
        - name: lathibandolaise-test
          image: php:8.3-cli-alpine
          command: ["sh", "-c", "apk add postgresql-dev && docker-php-ext-install pdo_pgsql && php -S 0.0.0.0:8080 -t /app/public"]
          workingDir: /app
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: 64Mi
              cpu: 50m
            limits:
              memory: 256Mi
          volumeMounts:
            - name: code
              mountPath: /app
      volumes:
        - name: code
          hostPath:
            path: /data/lathibandolaise
            type: DirectoryOrCreate
