k8s/apps/lathibandolaise/service-prod.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: lathibandolaise-prod-service
  namespace: lathibandolaise
spec:
  selector:
    app: lathibandolaise-prod
  ports:
    - port: 3000
      targetPort: 3000
